[gd_scene format=3 uid="uid://bceu3qkxl8ntx"]

[ext_resource type="Script" uid="uid://c7lmnmqjfte8s" path="res://scripts/player.gd" id="1_0sssh"]
[ext_resource type="PackedScene" uid="uid://dsp5eh01oqy2x" path="res://models/Meshy_AI_Mystical_Mushroom_0210183140_texture.glb" id="2_6nulb"]
[ext_resource type="Shader" uid="uid://blohnolmb3ys3" path="res://scripts/player.gdshader" id="3_vm6cd"]
[ext_resource type="PackedScene" uid="uid://b6vlgbnn7dtu0" path="res://models/Meshy_AI_Cigarette_Still_Life_0210194923_texture.glb" id="3_xefub"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0sssh"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xefub"]
gravity = Vector3(0, 2, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6akbd"]
transparency = 1

[sub_resource type="SphereMesh" id="SphereMesh_wyecu"]
material = SubResource("StandardMaterial3D_6akbd")
radius = 0.3

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gs3jq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0sssh"]
albedo_color = Color(0.043039158, 0.04303915, 0.04303915, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xefub"]
shader = ExtResource("3_vm6cd")
shader_parameter/strength = 0.05
shader_parameter/speed = 2.0

[node name="Player" type="CharacterBody3D" unique_id=1361342029]
script = ExtResource("1_0sssh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=902518776]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)
shape = SubResource("CapsuleShape3D_0sssh")

[node name="Head" type="Node3D" parent="." unique_id=1853464523]
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0, 2.9, 0)

[node name="Camera3D" type="Camera3D" parent="Head" unique_id=304058031]
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0, 0, 0)

[node name="Hand" type="Node3D" parent="Head/Camera3D" unique_id=175056607]

[node name="MushroomModel" parent="Head/Camera3D/Hand" unique_id=1867388029 instance=ExtResource("2_6nulb")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.423104, -0.017647028, -0.79221493)

[node name="CigaretteModel" parent="Head/Camera3D/Hand" unique_id=866240250 instance=ExtResource("3_xefub")]
transform = Transform3D(-0.05227612, 0.06602602, -0.18140498, -0.06602601, 0.17048927, 0.08107999, 0.18140496, 0.08107999, -0.022765422, 0.19147688, 0.08343673, -0.66876423)

[node name="SmokeParticles" type="GPUParticles3D" parent="Head/Camera3D/Hand/CigaretteModel" unique_id=1618725147]
transform = Transform3D(0.34288248, -0.9030293, -0.25878435, 0.5378528, 0.41458392, -0.7340527, 0.7701594, 0.11250599, 0.6278514, -3.6430752, 0.35677052, 0.5179448)
emitting = false
amount = 1
lifetime = 2.5
one_shot = true
preprocess = 0.5
speed_scale = 0.5
explosiveness = 0.8
fixed_fps = 20
process_material = SubResource("ParticleProcessMaterial_xefub")
draw_pass_1 = SubResource("SphereMesh_wyecu")

[node name="InteractionRay" type="RayCast3D" parent="Head" unique_id=554998593]
target_position = Vector3(0, 0, -2.5)

[node name="HandPos" type="Marker3D" parent="Head" unique_id=1725167669]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)

[node name="Flashlight" type="SpotLight3D" parent="Head/HandPos" unique_id=615431955]
transform = Transform3D(0.9867646, -0.025067827, 0.16021039, 0.030330198, 0.99907506, -0.030485705, -0.15929797, 0.034941435, 0.98661196, 0.4072107, -0.15876555, 1.5009662)
light_color = Color(0.74397665, 0.74397665, 3.85046e-07, 1)
light_energy = 10.0
light_indirect_energy = 10.0
light_volumetric_fog_energy = 10.0
light_size = 25.0
light_specular = 10.0
shadow_enabled = true
spot_range = 25.0
spot_attenuation = 1.5
spot_angle = 15.0

[node name="Player" type="MeshInstance3D" parent="." unique_id=1219713992]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)
mesh = SubResource("CapsuleMesh_gs3jq")

[node name="CanvasLayer1" type="CanvasLayer" parent="." unique_id=1775563633]

[node name="UI" type="Control" parent="CanvasLayer1" unique_id=871648536]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UI" type="ColorRect" parent="CanvasLayer1/UI" unique_id=1467511755]
layout_mode = 0
offset_left = 570.0
offset_top = 310.0
offset_right = 574.0
offset_bottom = 314.0

[node name="Prompt" type="Label" parent="CanvasLayer1/UI" unique_id=401368593]
modulate = Color(1, 1, 1, 0.80784315)
self_modulate = Color(1, 1, 1, 0.80784315)
layout_mode = 0
offset_left = 540.0
offset_top = 345.0
offset_right = 940.0
offset_bottom = 375.0
text = "Нажмите F чтобы подобрать"

[node name="CSGBox3D" type="CSGBox3D" parent="." unique_id=1514409468]
transform = Transform3D(0.97583294, 0, 0.21851794, 0, 1, 0, -0.21851794, 0, 0.97583294, 0.5100916, 2.5661838, -0.7484318)
size = Vector3(0.1, 0.1, 0.5)
material = SubResource("StandardMaterial3D_0sssh")

[node name="Node3D" type="Node3D" parent="CSGBox3D" unique_id=1566776182]

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D/Node3D" unique_id=99798563]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0036638975, 0, -0.19634885)

[node name="OmniLight3D" type="OmniLight3D" parent="CSGBox3D/Node3D" unique_id=306089637]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.011791229, 0, -0.38583744)
light_color = Color(0.83600616, 0.83600646, 0, 1)
light_energy = 16.0
light_indirect_energy = 16.0
light_volumetric_fog_energy = 16.0
light_size = 1.52
light_specular = 16.0
omni_range = 0.3

[node name="EffectsLayer" type="CanvasLayer" parent="." unique_id=529844121]

[node name="ColorRect" type="ColorRect" parent="EffectsLayer" unique_id=27526744]
visible = false
material = SubResource("ShaderMaterial_xefub")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1844731100]

[node name="InventoryUI" type="Control" parent="CanvasLayer" unique_id=127511865]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 176.0
offset_right = -125.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InventoryUI" unique_id=1100131459]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.142
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = 54.016
offset_right = 727.0
offset_bottom = 113.328
grow_horizontal = 2
grow_vertical = 2

[node name="Slot0" type="PanelContainer" parent="CanvasLayer/InventoryUI/HBoxContainer" unique_id=621330513]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InventoryUI/HBoxContainer/Slot0" unique_id=2078354606]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/InventoryUI/HBoxContainer/Slot0" unique_id=1483221350]
layout_mode = 2
text = "                  "

[node name="Slot1" type="PanelContainer" parent="CanvasLayer/InventoryUI/HBoxContainer" unique_id=1981664753]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InventoryUI/HBoxContainer/Slot1" unique_id=559462153]
layout_mode = 2
expand_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/InventoryUI/HBoxContainer/Slot1" unique_id=317717383]
layout_mode = 2
text = "                 "

[node name="Slot2" type="PanelContainer" parent="CanvasLayer/InventoryUI/HBoxContainer" unique_id=978620870]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InventoryUI/HBoxContainer/Slot2" unique_id=221778418]
layout_mode = 2
expand_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/InventoryUI/HBoxContainer/Slot2" unique_id=1334846843]
layout_mode = 2
text = "                 "

[node name="Slot3" type="PanelContainer" parent="CanvasLayer/InventoryUI/HBoxContainer" unique_id=883174479]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InventoryUI/HBoxContainer/Slot3" unique_id=696355497]
layout_mode = 2
expand_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/InventoryUI/HBoxContainer/Slot3" unique_id=1069316639]
layout_mode = 2
text = "                 "

[editable path="Head/Camera3D/Hand/CigaretteModel"]
